--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lite-server": "^2.3.0"
   },
   "dependencies": {
+    "@toruslabs/torus-embed": "0.0.24",
     "web3": "^1.0.0-beta.48"
   }
 }
